desining login page

--- a/src/frontend/styles/app.scss
+++ b/src/frontend/styles/app.scss
@@ -1,4 +1,10 @@
+@import "~bulma/bulma";
+
 html {
-  padding: 3em;
-  background-color: yellow;
+    direction: rtl;
+}
+
+body {
+    font-family: tahoma;
+    background: #f7f7f7;
 }
