--- a/views/home.pug
+++ b/views/home.pug
@@ -5,8 +5,8 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Welcome page
   body
-    h1 Hello world 
+    h1 Hello world
       h2 #{ message }
 
-      a(href=Helper.route("home.login")) Login
-      a(href=Helper.route("home.logout")) Logout
+      a(href=Helper.route("auth.login")) Login
+      //- a(href=Helper.route("home.logout")) Logout
