--- a/views/home.pug
+++ b/views/home.pug
@@ -4,9 +4,10 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Welcome page
-  body
+    link(rel="stylesheet" href="styles/core/app.css")
+
+  body.login-container
     h1 Hello world
       h2 #{ message }
-
       a(href=Helper.route("auth.login")) Login
-      //- a(href=Helper.route("home.logout")) Logout
+      script(defer src=Helper.mix("scripts/app.js"))
